--- a/leader.html
+++ b/leader.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="leader.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
     <title>Leader</title>
 </head>
 <body>
@@ -19,28 +20,28 @@
                     <!-- .player*6>img[src="images/players/player-$.png"]+h3{Top Player-$} -->
 
                     <div class="player">
-                        <img src="images/players/player-1.png" alt="">
-                        <h3>Top Player-1</h3>
+                        <img src="images/family/baba.JPG" alt="">
+                        <h3>Hafez Maw. Md. Hasan</h3>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-2.png" alt="">
-                        <h3>Top Player-2</h3>
+                        <img src="images/family/bahar.jpg" alt="">
+                        <h3>A H M Bahauddin</h3>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-3.png" alt="">
-                        <h3>Top Player-3</h3>
+                        <img src="images/family/masuk.jpg" alt="">
+                        <h3>Minhazul Abedin (Masuk)</h3>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-4.png" alt="">
-                        <h3>Top Player-4</h3>
+                        <img src="images/family/junaid.jpg" alt="">
+                        <h3>R S M Junaid</h3>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-5.png" alt="">
-                        <h3>Top Player-5</h3>
+                        <img src="images/family/bayzid.jpg" alt="">
+                        <h3>S S Md. Bayzid</h3>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-6.png" alt="">
-                        <h3>Top Player-6</h3>
+                        <img src="images/family/Rafsan.JPG" alt="">
+                        <h3>S A Md. Bahalul</h3>
                     </div>
                 </div>                
             </div>
