--- a/leader.html
+++ b/leader.html
@@ -45,6 +45,51 @@
                     </div>
                 </div>                
             </div>
+            <hr>
+            <h3 class="section-tittle">Top Blog</h3>
+            <div class="bloges">
+                <div class="blog">
+                    <div class="thumbline">
+                        <img src="images/blogs/blog-1.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3>13 of My Favorite
+                            UI/UX Goodies</h3>
+                            <p>By <strong>Danny Sapio</strong></p>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="thumbline">
+                        <img src="images/blogs/blog-2.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3>13 of My Favorite
+                            UI/UX Goodies</h3>
+                            <p>By <strong>Danny Sapio</strong></p>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="thumbline">
+                        <img src="images/blogs/blog-3.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3>13 of My Favorite
+                            UI/UX Goodies</h3>
+                            <p>By <strong>Danny Sapio</strong></p>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="thumbline">
+                        <img src="images/blogs/blog-4.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3>13 of My Favorite
+                            UI/UX Goodies</h3>
+                            <p>By <strong>Danny Sapio</strong></p>
+                    </div>
+                </div>
+
+            </div>
         </section>
     </main>
 </body>
